--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "ethers": "^5.0.0",
     "hardhat": "^2.10.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1"
   }
 }
